fix info box overflow

--- a/src/styles/Weather.scss
+++ b/src/styles/Weather.scss
@@ -171,7 +171,7 @@ section {
     #info-container {
       padding: 1.5rem;
       border-radius: 3rem;
-      height: 330px;
+      height: 360px;
     }
     .location-box {
       .location {
@@ -221,7 +221,7 @@ section {
     #info-container {
       padding: 1rem;
       border-radius: 2.5rem;
-      height: 300px;
+      height: 320px;
     }
     .location-box {
       .location {
